--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,13 @@
         android:roundIcon="@drawable/logorsud"
         android:supportsRtl="true"
         android:theme="@style/Theme.RSUD"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Daftar.DaftarPoliKlinikActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Apotek.ApotekActivity"
+            android:exported="false" />
         <activity
             android:name=".Daftar.DaftarJalanActivity"
             android:exported="false" />
@@ -24,7 +30,7 @@
             android:screenOrientation="fullSensor" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
