--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -12,8 +11,13 @@
         android:roundIcon="@drawable/logorsud"
         android:supportsRtl="true"
         android:theme="@style/Theme.RSUD"
-        tools:targetApi="31"
-        >
+        tools:targetApi="31" >
+        <activity
+            android:name=".kamar.KamarInapActivity"
+            android:exported="false" />
+        <activity
+            android:name=".kamar.KamarInap"
+            android:exported="false" />
         <activity
             android:name=".daftar.DaftarPoliKlinikActivity"
             android:exported="false" />
@@ -29,11 +33,10 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:screenOrientation="fullSensor"
-            />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
